// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RatingSkeleton Snapshots RatingSkeleton animate snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.size--jumbo .variant--circle {
  margin-right: 0.25rem;
}

.c0.size--jumbo .variant--rect {
  margin-left: 0.625rem;
}

.c0.size--large .variant--circle {
  margin-right: 0.125rem;
}

.c0.size--large .variant--rect {
  margin-left: 0.375rem;
}

.c0.size--medium .variant--rect {
  margin-left: 0.125rem;
}

.c0.size--small .variant--rect {
  margin-left: 0.125rem;
}

.c1 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c1.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.variant--circle {
  width: 1.5rem;
  height: 1.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c1.variant--rect {
  width: 1.5rem;
  height: 1.5rem;
}

.c1.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--rect.shape--squared {
  border-radius: 0;
}

.c1.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c1.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--text.shape--squared {
  border-radius: 0;
}

<span
    class="c0 rating--skeleton size--medium"
  >
    <div
      class="c1 variant--circle shape--rounded style--animated"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--animated"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--animated"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--animated"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--animated"
      height="size_24"
      width="size_24"
    />
  </span>
</DocumentFragment>
`;

exports[`RatingSkeleton Snapshots RatingSkeleton default snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.size--jumbo .variant--circle {
  margin-right: 0.25rem;
}

.c0.size--jumbo .variant--rect {
  margin-left: 0.625rem;
}

.c0.size--large .variant--circle {
  margin-right: 0.125rem;
}

.c0.size--large .variant--rect {
  margin-left: 0.375rem;
}

.c0.size--medium .variant--rect {
  margin-left: 0.125rem;
}

.c0.size--small .variant--rect {
  margin-left: 0.125rem;
}

.c1 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c1.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.variant--circle {
  width: 1.5rem;
  height: 1.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c1.variant--rect {
  width: 1.5rem;
  height: 1.5rem;
}

.c1.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--rect.shape--squared {
  border-radius: 0;
}

.c1.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c1.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--text.shape--squared {
  border-radius: 0;
}

<span
    class="c0 rating--skeleton size--medium"
  >
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
  </span>
</DocumentFragment>
`;

exports[`RatingSkeleton Snapshots RatingSkeleton sizes snapshot 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.size--jumbo .variant--circle {
  margin-right: 0.25rem;
}

.c0.size--jumbo .variant--rect {
  margin-left: 0.625rem;
}

.c0.size--large .variant--circle {
  margin-right: 0.125rem;
}

.c0.size--large .variant--rect {
  margin-left: 0.375rem;
}

.c0.size--medium .variant--rect {
  margin-left: 0.125rem;
}

.c0.size--small .variant--rect {
  margin-left: 0.125rem;
}

.c1 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c1.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.variant--circle {
  width: 1rem;
  height: 1rem;
  border-radius: var(--bds-border-radius-circle);
}

.c1.variant--rect {
  width: 1rem;
  height: 1rem;
}

.c1.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--rect.shape--squared {
  border-radius: 0;
}

.c1.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c1.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--text.shape--squared {
  border-radius: 0;
}

<span
    class="c0 rating--skeleton size--small"
  >
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_16"
      width="size_16"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_16"
      width="size_16"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_16"
      width="size_16"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_16"
      width="size_16"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_16"
      width="size_16"
    />
  </span>
</DocumentFragment>
`;

exports[`RatingSkeleton Snapshots RatingSkeleton sizes snapshot 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.size--jumbo .variant--circle {
  margin-right: 0.25rem;
}

.c0.size--jumbo .variant--rect {
  margin-left: 0.625rem;
}

.c0.size--large .variant--circle {
  margin-right: 0.125rem;
}

.c0.size--large .variant--rect {
  margin-left: 0.375rem;
}

.c0.size--medium .variant--rect {
  margin-left: 0.125rem;
}

.c0.size--small .variant--rect {
  margin-left: 0.125rem;
}

.c1 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c1.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.variant--circle {
  width: 1.5rem;
  height: 1.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c1.variant--rect {
  width: 1.5rem;
  height: 1.5rem;
}

.c1.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--rect.shape--squared {
  border-radius: 0;
}

.c1.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c1.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--text.shape--squared {
  border-radius: 0;
}

<span
    class="c0 rating--skeleton size--medium"
  >
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
  </span>
</DocumentFragment>
`;

exports[`RatingSkeleton Snapshots RatingSkeleton sizes snapshot 3`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.size--jumbo .variant--circle {
  margin-right: 0.25rem;
}

.c0.size--jumbo .variant--rect {
  margin-left: 0.625rem;
}

.c0.size--large .variant--circle {
  margin-right: 0.125rem;
}

.c0.size--large .variant--rect {
  margin-left: 0.375rem;
}

.c0.size--medium .variant--rect {
  margin-left: 0.125rem;
}

.c0.size--small .variant--rect {
  margin-left: 0.125rem;
}

.c1 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c1.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.variant--circle {
  width: 1.5rem;
  height: 1.5rem;
  border-radius: var(--bds-border-radius-circle);
}

.c1.variant--rect {
  width: 1.5rem;
  height: 1.5rem;
}

.c1.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--rect.shape--squared {
  border-radius: 0;
}

.c1.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c1.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--text.shape--squared {
  border-radius: 0;
}

<span
    class="c0 rating--skeleton size--large"
  >
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_24"
      width="size_24"
    />
  </span>
</DocumentFragment>
`;

exports[`RatingSkeleton Snapshots RatingSkeleton sizes snapshot 4`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.size--jumbo .variant--circle {
  margin-right: 0.25rem;
}

.c0.size--jumbo .variant--rect {
  margin-left: 0.625rem;
}

.c0.size--large .variant--circle {
  margin-right: 0.125rem;
}

.c0.size--large .variant--rect {
  margin-left: 0.375rem;
}

.c0.size--medium .variant--rect {
  margin-left: 0.125rem;
}

.c0.size--small .variant--rect {
  margin-left: 0.125rem;
}

.c1 {
  background: var(--bds-color-skeleton-01);
  position: relative;
  padding: 0;
  border: none;
  box-shadow: none;
  pointer-events: none;
  overflow: hidden;
}

.c1.style--animated::before {
  position: absolute;
  content: '';
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: var(--bds-color-skeleton-01);
  -webkit-animation-name: pulse;
  animation-name: pulse;
  -webkit-animation-duration: 2s;
  animation-duration: 2s;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: normal;
  animation-direction: normal;
  -webkit-animation-fill-mode: none;
  animation-fill-mode: none;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.c1.variant--circle {
  width: 2rem;
  height: 2rem;
  border-radius: var(--bds-border-radius-circle);
}

.c1.variant--rect {
  width: 2rem;
  height: 2rem;
}

.c1.variant--rect.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--rect.shape--squared {
  border-radius: 0;
}

.c1.variant--text {
  width: 100%;
  height: 16px;
  margin-bottom: var(--bds-sizes-size-6);
}

.c1.variant--text.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c1.variant--text.shape--squared {
  border-radius: 0;
}

<span
    class="c0 rating--skeleton size--jumbo"
  >
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_32"
      width="size_32"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_32"
      width="size_32"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_32"
      width="size_32"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_32"
      width="size_32"
    />
    <div
      class="c1 variant--circle shape--rounded style--default"
      height="size_32"
      width="size_32"
    />
  </span>
</DocumentFragment>
`;
